--- a/views/pages/admin/tree.ejs
+++ b/views/pages/admin/tree.ejs
@@ -5,12 +5,10 @@
 
 
 
-<div class="container dashboard" style="padding: 25px; margin-bottom: 25px; margin-top: 25px;">
-  <input type="text" class="input input-bordered border-opacity-100 w-full max-w-lg bg-slate-100 mx-20 mb-12" id="searchbar" placeholder="Search Data..."/>
+<div class="container overflow-auto mb-4 p-0">
+  <%-include("../partials/searchbar.ejs")-%>
 
-  <div class="row" id="tree">
-  </div>
+  <div class="grid sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4 p-4 m-4 rounded-3xl bg-white text-center" id="tree">
 </div>
-
 
 <script src="/js/tree_script.js"></script>
