--- a/views/partials/bars/adminbar.ejs
+++ b/views/partials/bars/adminbar.ejs
@@ -1,7 +1,8 @@
-<li >
+<li > 
   <a
   href="/admin"
-  class="btn btn-ghost btn-md rounded-btn"><span class="fa fa-eye fa-md "></span><span >Dashboard</span></a
+  class="btn btn-ghost"><i class="fa fa-eye fa-md "></i>
+  Dashboard</a
 >
 </li>
 
