--- a/views/pages/admin/admintools/userdata.ejs
+++ b/views/pages/admin/admintools/userdata.ejs
@@ -1,9 +1,10 @@
 <a href="/admin/<%=link%>" style="text-decoration: none; color: black;">
-    <div class="col-md-3 col-xs-6">
-      <div class="container dashboarditems">
-        <i class="fa <%=icon%> icon" style="margin: 0;" aria-hidden="true"></i>
-        <h4 class="font dashboardfont" style="font-family: 'Tomorrow', sans-serif;"><%=context%></h4>
-      </div>
-    </div>
+  <!-- <label class="label justify-center ">
+    <span class="label-text text-lg"><%=context%></span>
+  </label> -->
+  <div class="container dashboarditems items-center justify-center">
+    <i class="fa <%=icon%> icon" style="margin: 0;" aria-hidden="true"></i>
+    <h4 class="font dashboardfont hidden sm:block" style="font-family: 'Tomorrow', sans-serif;"><%=context%></h4>
+  </div>
 </a>
 
