--- a/views/pages/admin/datatable.ejs
+++ b/views/pages/admin/datatable.ejs
@@ -5,9 +5,9 @@
 
 <%-include("../partials/pagination.ejs")-%>
 
-
-<div class="container overflow-auto mb-4 p-0">
-  <%-include("../partials/searchbar.ejs")-%>
+<%-include("../partials/searchbar.ejs")-%>
+<div class="container overflow-x-auto w-screen mb-4 p-0">
+  
   <table class="table bg-white text-center">
     <tr>
       <th >การแก้ไข</th>
