--- a/views/pages/admin/dashboard.ejs
+++ b/views/pages/admin/dashboard.ejs
@@ -4,8 +4,8 @@
 
 <div class="container bg-gray-100 rounded-3xl p-4 mb-4">
   <div class="grid grid-cols-2 sm:grid-cols-4 grid-rows-4 sm:grid-rows-2 gap-4">
-    <%-include('admintools/infodata.ejs',{ShowData: "จำนวนสมาชิกในระบบ",ShowNum:usersAmount})-%> 
-    <%-include('admintools/infodata.ejs',{ShowData:"สมาชิกที่ถูกเพิ่มวันนี้",ShowNum: '+'+currentDayAmount})-%>
+    <%-include('admintools/infodata.ejs',{ShowData: "สมาชิกในระบบ",ShowNum:usersAmount})-%> 
+    <%-include('admintools/infodata.ejs',{ShowData:"ปริมาณเพิ่มวันนี้",ShowNum: '+'+currentDayAmount})-%>
     <%-include('admintools/infodata.ejs',{ShowData:"Temp",ShowNum: 'Temp'})-%>
     <%-include('admintools/infodata.ejs',{ShowData:"Temp",ShowNum: 'Temp'})-%>
     <%-include('admintools/userdata.ejs',{link:'userdata',icon:'fa-table fa-5x',context:'Users Data'})-%> 
