--- a/views/pages/admin/tree.ejs
+++ b/views/pages/admin/tree.ejs
@@ -4,9 +4,9 @@
 <%-include("../partials/pagination.ejs")-%>
 
 
+<%-include("../partials/searchbar.ejs")-%>
 
-<div class="container overflow-auto mb-4 p-0">
-  <%-include("../partials/searchbar.ejs")-%>
+<div class="container overflow-x-auto w-screen mb-4 p-0">
 
   <div class="grid sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4 p-4 m-4 rounded-3xl bg-white text-center" id="tree">
 </div>
