--- a/views/pages/partials/searchbar.ejs
+++ b/views/pages/partials/searchbar.ejs
@@ -1,1 +1,1 @@
-<input type="text" placeholder="Search..." class="input input-bordered w-full max-w-xs mb-4 mx-4" />  
+<input type="text" id="searchbar" placeholder="Search..." class="input input-bordered w-full max-w-xs mb-4 mx-4" />  
