--- a/views/pages/user/user.ejs
+++ b/views/pages/user/user.ejs
@@ -3,50 +3,54 @@
 
 <%-include("../partials/widget.ejs",{day: day, link: 'user'})-%>
 
-<div class="flex flex-col md:container overflow-x-auto  bg-white rounded-3xl p-10 mb-4">
-  <div class="grid justify-center">
-    <a href="/user">
-      <i class="fa-solid fa-person fa-7x" style="color: red"></i>
-      <h1><%=userName.username%></h1>
-    </a>
-  </div>
-  
-  <div id="lev2" class='flex sm:grid grid-cols-2'>
-  </div>
-  
-  <div id="lev3" class='flex sm:grid grid-cols-4'>
-  </div>
-  
-  <div id="lev4" class='flex sm:grid grid-cols-8'>
-  </div>
-  
-  <div id="lev5" class='flex sm:grid grid-cols-16'>
-  </div>
-  
-  <div class='flex sm:grid grid-cols-32'>
-    <%var count=0%>
-    <%for(var i=0; i<Child.length;i++){%>
-    <%if(!Child[i].lev6){continue}%>
-    <div class='flex-1 justify-center'>
-      <a href="/user/<%=Child[i].lev6%>" class='flex flex-col items-center'>
-        <i class="fa-solid fa-person fa-2x" style="color: gray"></i>
-        <p style="font-size: 12px"><%=Child[i].lev6%></p>
+<div class="w-screen overflow-auto">
+  <div class="flex flex-col w-fit sm:w-auto md:container bg-white rounded-3xl p-10 mb-4">
+    <div class="grid justify-center">
+      <a href="/user">
+        <i class="fa-solid fa-person fa-7x" style="color: red"></i>
+        <h1><%=userName.username%></h1>
       </a>
     </div>
-    <%count++}%>
     
-    <%for(var i=count;i<32;i++){%>
+    <div id="lev2" class='flex sm:grid grid-cols-2'>
+    </div>
+    
+    <div id="lev3" class='flex sm:grid grid-cols-4'>
+    </div>
+    
+    <div id="lev4" class='flex sm:grid grid-cols-8'>
+    </div>
+    
+    <div id="lev5" class='flex sm:grid grid-cols-16'>
+    </div>
+    
+    <div class='flex sm:grid grid-cols-32'>
+      <%var count=0%>
+      <%for(var i=0; i<Child.length;i++){%>
+      <%if(!Child[i].lev6){continue}%>
       <div class='flex-1 justify-center'>
-          <i class="fa-solid fa-person fa-2x" style="color: darkgray"></i>
-          <p></p>
+        <a href="/user/<%=Child[i].lev6%>" class='flex flex-col items-center'>
+          <i class="fa-solid fa-person fa-2x" style="color: gray"></i>
+          <p style="font-size: 12px"><%=Child[i].lev6%></p>
+        </a>
       </div>
-    <%}%>
-
+      <%count++}%>
+      
+      <%for(var i=count;i<32;i++){%>
+        <div class='flex-1 justify-center'>
+            <i class="fa-solid fa-person fa-2x" style="color: darkgray"></i>
+            <p></p>
+        </div>
+      <%}%>
+  
+      
     
-  
+    </div>
+    
   </div>
-  
 </div>
+
+
 
 <script>
   const Child = <%-JSON.stringify(Child)%>;
