fix user frontend

--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -1,6 +1,6 @@
 
 
-<div class="overflow-auto mb-4 mx-4 p-0">
+<div class="container overflow-x-auto w-screen mb-4 p-0">
   <table id="cart" class="table table-sm text-center bg-white  ">
 
       <tr>
