--- a/views/pages/order/order.ejs
+++ b/views/pages/order/order.ejs
@@ -2,14 +2,14 @@
 
 
 
-<div class="container overflow-auto mb-4">
-    <table id="cart" class="table text-center bg-white ">
+<div class="container overflow-x-auto w-screen mb-4 p-0">
+    <table id="cart" class="table text-center bg-white">
           <tr>
-            <th class="text-center" style="width: 30%;">การจัดการ</th>
-            <th class="text-center" style="width: 30%;">สถานะ</th>
-            <th class="text-center" style="width: 5%;">มูลค่า</th>
-            <th class="text-center" style="width: 5%;">จำนวนชิ้น</th>
-            <th class="text-center" style="width: 30%;">Order Id</th>
+            <th class="text-center" >การจัดการ</th>
+            <th class="text-center" >สถานะ</th>
+            <th class="text-center" >มูลค่า</th>
+            <th class="text-center" >จำนวนชิ้น</th>
+            <th class="text-center" >Order Id</th>
           </tr>
           <%orders.forEach((element)=>{%>
           <tbody>
