--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 </main>
 
-<footer class="p-4 footer bg-base-300 text-base-content footer-center">
+<footer class="p-4 footer bg-gray-900 text-base-content footer-center">
   <div>
     <p>Copyright © 2023 - All right reserved by Paul</p>
   </div>
@@ -11,7 +11,7 @@
 <div class="drawer-side w-screen overflow-hidden">
   <label for="my-drawer-3" class="drawer-overlay h-screen"></label> 
 
-  <ul class="menu p-4 w-80 h-full bg-base-200 text-slate-200">
+  <ul class="menu p-4 w-80 h-full bg-gray-800 text-slate-200">
     <div class="flex px-2 mx-2 justify-center py-12">
       <img class="w-auto h-20 ml-6" src="\images\logo1.svg">
     </div>
