--- a/views/pages/user/account.ejs
+++ b/views/pages/user/account.ejs
@@ -2,7 +2,7 @@
 
 
 
-<div class="sm:container max-w-screen-md mx-10 sm:mx-20">
+<div class="flex flex-col justify-center">
 
   <div class="container bg-gray-100 rounded-3xl p-4 mb-4">
     <div class="sm:container grid grid-cols-2 sm:grid-cols-3 grid-rows-3 sm:grid-rows-2 gap-4 mb-4  text-center justify-items-center">
