--- a/views/pages/user/user.ejs
+++ b/views/pages/user/user.ejs
@@ -73,7 +73,7 @@
     empty++
   })
   for (var i = empty; i < 32/16; i++) {
-    var temp = "<div class='flex-1 justify-center'>"+
+    var temp = "<div class='flex flex-1 justify-center'>"+
       "<i class='fa-solid fa-person fa-6x' style='color: darkgray'></i>"+
       "</div>"
     $("#lev2").append(temp)
@@ -92,7 +92,7 @@
     empty++
   })
   for (var i = empty; i < 32/8; i++) {
-    var temp = "<div class='flex-1 justify-center'>"+
+    var temp = "<div class='flex flex-1 justify-center'>"+
       "<i class='fa-solid fa-person fa-5x' style='color: darkgray'></i>"+
       "</div>"
     $("#lev3").append(temp)
@@ -111,7 +111,7 @@
     empty++
   })
   for (var i = empty; i < 32/4; i++) {
-    var temp = "<div class='flex-1 justify-center'>"+
+    var temp = "<div class='flex flex-1 justify-center'>"+
       "<i class='fa-solid fa-person fa-4x' style='color: darkgray'></i>"+
       "</div>"
     $("#lev4").append(temp)
@@ -130,7 +130,7 @@
     empty++
   })
   for (var i = empty; i < 32/2; i++) {
-    var temp = "<div class='flex-1 justify-center'>"+
+    var temp = "<div class='flex flex-1 justify-center'>"+
       "<i class='fa-solid fa-person fa-3x' style='color: darkgray'></i>"+
       "</div>"
     $("#lev5").append(temp)
